log
Thu 14 Sep 2023 07:53:10 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
57845a9
Thu 14 Sep 2023 07:53:27 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  4|7
total_score: 5/70
5198933
Thu 14 Sep 2023 07:59:34 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:88:16: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   88 |         return current;
      |                ^~~~~~~
treemap.c:93:9: error: ‘else’ without a previous ‘if’
   93 |       } else {
      |         ^~~~
treemap.c:94:34: error: expected ‘;’ before ‘}’ token
   94 |           current = current->left
      |                                  ^
      |                                  ;
   95 |       }
      |       ~                           
cc1: all warnings being treated as errors
Compilation failed
44a9989
Thu 14 Sep 2023 08:41:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:93:9: error: ‘else’ without a previous ‘if’
   93 |       } else {
      |         ^~~~
treemap.c:94:34: error: expected ‘;’ before ‘}’ token
   94 |           current = current->left
      |                                  ^
      |                                  ;
   95 |       }
      |       ~                           
Compilation failed
011a82c
Thu 14 Sep 2023 08:42:51 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:92:35: error: expected ‘;’ before ‘}’ token
   92 |           current = current->right
      |                                   ^
      |                                   ;
   93 |       }
      |       ~                            
Compilation failed
1d9bc4a
Thu 14 Sep 2023 08:42:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
0cb8e73
Thu 14 Sep 2023 08:45:42 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
test.c: In function ‘minimum’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
c66ffb9
Thu 14 Sep 2023 08:46:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
f3f2e78
Thu 14 Sep 2023 08:46:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
1d3f449
Thu 14 Sep 2023 08:56:53 PM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  7|6
total_score: 5/70
6fa669a
Thu 14 Sep 2023 08:59:09 PM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  8|6
total_score: 5/70
3138c76
Thu 14 Sep 2023 09:02:52 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  10|5
total_score: 10/70
52330e2
Fri 15 Sep 2023 12:09:22 AM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:169:9: error: ‘TreeMap’ has no member named ‘left’
  169 |     tree->left = current;
      |         ^~
Compilation failed
12658bc
Fri 15 Sep 2023 12:09:44 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
1c89b9c
Fri 15 Sep 2023 12:10:11 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
c27c40d
Fri 15 Sep 2023 12:12:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
4fc7f4d
Fri 15 Sep 2023 12:18:59 AM UTC: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:161:21: error: ‘TreeNode’ has no member named ‘current’
  161 |       return ub_node->current;
      |                     ^~
treemap.c:165:1: error: control reaches end of non-void function [-Werror=return-type]
  165 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0ce8164
Fri 15 Sep 2023 12:19:28 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:165:1: error: control reaches end of non-void function [-Werror=return-type]
  165 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5a11e1b
Fri 15 Sep 2023 12:20:00 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
037f7f8
Fri 15 Sep 2023 12:22:13 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
b87db7a
Fri 15 Sep 2023 12:22:25 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:165:10: error: ‘pepe’ undeclared (first use in this function)
  165 |   return pepe;
      |          ^~~~
treemap.c:165:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:166:1: error: control reaches end of non-void function [-Werror=return-type]
  166 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2e88904
Fri 15 Sep 2023 12:22:43 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:165:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  165 |   return current;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0018ff7
Fri 15 Sep 2023 12:22:53 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
d48a389
Fri 15 Sep 2023 12:31:25 AM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
 tests:  15|4
total_score: 25/70
d80534f
Fri 15 Sep 2023 12:37:36 AM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
710fca1
Fri 15 Sep 2023 12:42:17 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  15|4
total_score: 25/70
fa40258
Fri 15 Sep 2023 12:43:13 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
bc856ff
Fri 15 Sep 2023 12:50:31 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
2aa1c1a
Fri 15 Sep 2023 12:53:19 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5046260
Fri 15 Sep 2023 12:55:03 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:89:16: error: ‘current’ undeclared (first use in this function)
   89 |   tree->root = current;
      |                ^~~~~~~
treemap.c:89:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
419f231
